Wed Mar  3 16:00:10 2004  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Strip out the "export-dynamic" libtool
	option from library link lines. (#124687, James Henstridge)

Wed Mar  3 16:06:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (save_folder_combo_changed_cb):
	Don't activate the combo if we're in the midst of changing
	folders.

2004-03-03  Mark McLoughlin  <mark@skynet.ie>

	* tests/testsocket_common.c: (print_hello): don't try and store
	pointers in ints. Fixes 64-bit build.

2004-03-03  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilesystem.c (gtk_file_system_get_parent): Simplify by
	not using a temporary variable, and clarify the documentation.
	Fixes #136008.

2004-03-03  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkexpander.c:
	(gtk_expander_enter_notify), (gtk_expander_leave_notify),
	(gtk_expander_set_label_widget): Set the label widget's
	state to prelight if we're prelit. Fixes bug #136078.

2004-03-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkradiobutton.h, radiomenuitem.h: Corrected the group_changed
	signal vfunc declaration, adding the first parameter, which is the
	widget emitting the signal.

2004-03-03  Morten Welinder  <terra@gnome.org>

	* tests/testfilechooser.c (update_preview_cb): Plug leak.

Tue Mar  2 23:39:55 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdialog.c
	(file_chooser_widget_default_realized_size_changed): Split
	function into realized and unrealized variants, and consolidate
	the handling fo size-changing and default changing.

	* gtk/gtkfilechooserembed.[ch] (gtk_file_chooser_embed_class_init):
	remove resizable-hints-changed, as it just complicated things.

	* gtk/gtkfilechooserdefault.c (update_appearance): Don't emit
	resizable-hints-changed.
	
2004-03-03  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtk.def: Add a missing entry. (#135982, J. Ali Harlow)

	* NEWS: Correct spelling of my name in one place.
